# ebook-generator

./: .env.example  .gitignore  Makefile  main.py  pyproject.toml
agents/: models.py  planner.py  writer.py
cli/: prompts.py
docs/superpowers/plans/: 2026-04-13-ebook-generator.md
docs/superpowers/specs/: 2026-04-13-ebook-generator-design.md
export/: docx_builder.py  template_reader.py
images/: generator.py
pipeline/: orchestrator.py
research/: perplexity.py
tests/: test_cli.py  test_docx_builder.py  test_image_generator.py  test_models.py  test_perplexity.py  test_planner.py  test_template_reader.py  test_writer.py
