[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "ebook-generator"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.91.0",
    "openai>=1.30.0",
    "google-generativeai>=0.5.0",
    "requests>=2.31.0",
    "python-docx>=1.1.0",
    "python-dotenv>=1.0.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"
pythonpath = ["."]
